--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="../src/assets/minelogo.png" />
-  <title>Calide Bar & Restaurante</title>
+  <title>Calidi Bar & Restaurante</title>
 </head>
 
 <body>
