--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="../src/assets/minelogo.png" />
-  <title>Calidi Bar & Restaurante</title>
+  <link rel="icon" href="./favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <title>Calide Bar & Restaurante</title>
 </head>
 
 <body>
